--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.datasource.password=0000
 spring.jpa.show-sql: true
 
 spring.web.resources.add-mappings=false
+
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
