--- a/UserService/UserServiceJWT/src/main/resources/application.properties
+++ b/UserService/UserServiceJWT/src/main/resources/application.properties
@@ -18,9 +18,6 @@ eureka.instance.hostname=localhost
 eureka.client.service-url.defaultZone:http://localhost:8761/eureka
 spring.config.import=optional:configserver:http://localhost:8888
 
-spring.kafka.bootstrap-servers=pkc-l7pr2.ap-south-1.aws.confluent.cloud:9092
+spring.kafka.producer.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-spring.kafka.properties.sasl.mechanism=PLAIN
-spring.kafka.properties.security.protocol=SASL_SSL
-spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username=${CLUSTER_API_KEY} password=${CLUSTER_API_SECRET};
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
