--- a/UserService/UserServiceJWT/pom.xml
+++ b/UserService/UserServiceJWT/pom.xml
@@ -157,6 +157,8 @@
                             <artifactId>lombok</artifactId>
                         </path>
                     </annotationProcessorPaths>
+                    <source>15</source>
+                    <target>15</target>
                 </configuration>
             </plugin>
             <plugin>
