--- a/UserServiceJWT/src/main/resources/application.properties
+++ b/UserServiceJWT/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.datasource.username=root
 spring.datasource.password=0000
 spring.jpa.show-sql: true
+server.port=8080
 
 spring.web.resources.add-mappings=false
 
@@ -16,7 +17,9 @@ spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_
 
 eureka.instance.hostname=localhost
 eureka.client.service-url.defaultZone:http://localhost:8761/eureka
+#eureka.instance.non-secure-port=8080
 spring.config.import=optional:configserver:http://localhost:8888
+eureka.instance.instance-id=${spring.application.name}:${server.port}
 
 spring.kafka.producer.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
